examples/test/testpolicy19437.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19437
  namespace: namespace463
spec:
  podSelector:
    matchLabels:
      key41: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value23
      podSelector:
        matchLabels:
          key10: value46
          key9: value4
          key26: value13
